# kyf

app/agent/: manus.py  toolcall.py
app/tool/: google_search.py  pdf_parser.py  python_execute.py
backend/: README.md  app.py  investment_analysis_report.txt  maxa_investment_analysis.md  maxa_investment_decision_framework.md  maxa_market_analysis.md  maxa_website.html  pdf_viewer.html  pyproject.toml
backend/app/: config.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/public/: follow_up_questions.txt  founder_background_check.txt  founder_evaluation_rubric.txt  founder_rubric.txt
